--- a/index.html
+++ b/index.html
@@ -2,94 +2,288 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Isle's Echo Shop</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Dino Shop</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #1b1b1b;
+      color: #fff;
+    }
     header {
-      background: #265f3f;
-      color: white;
-      padding: 15px 30px;
-      display: flex; justify-content: space-between; align-items: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      background: #2e8b57;
+    }
+    header h1 {
+      margin: 0;
     }
     .currency-select {
-      padding: 5px; border-radius: 5px; border: none; font-size: 16px;
+      background: #333;
+      color: white;
+      padding: 6px;
+      border-radius: 6px;
+      border: none;
+      cursor: pointer;
+    }
+    .tabs {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin: 20px 0;
+    }
+    .tab {
+      padding: 10px 20px;
+      background: #333;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .tab.active {
+      background: #2e8b57;
+    }
+    .filters {
+      text-align: center;
+      margin-bottom: 15px;
+    }
+    .filters button {
+      margin: 0 5px;
+      padding: 6px 12px;
+      border: none;
+      border-radius: 6px;
+      background: #444;
+      color: white;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .filters button.active {
+      background: #2e8b57;
     }
     .shop {
-      display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      padding: 20px;
     }
     .card {
-      background: white; padding: 15px; width: 200px; text-align: center;
-      border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); transition: transform 0.2s;
+      background: #2b2b2b;
+      padding: 15px;
+      border-radius: 12px;
+      text-align: center;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
-    .card:hover { transform: translateY(-5px); }
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.5);
+    }
+    .card img {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-bottom: 10px;
+    }
+    .price {
+      color: #90ee90;
+      font-size: 18px;
+      margin: 10px 0;
+    }
     .buy-btn {
-      margin-top: 10px; padding: 6px 12px; border: none;
-      background: #265f3f; color: white; border-radius: 6px;
-      cursor: pointer; font-size: 14px;
+      padding: 8px 16px;
+      border: none;
+      border-radius: 8px;
+      background: #2e8b57;
+      color: white;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .buy-btn:hover {
+      background: #3cb371;
+    }
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      justify-content: center;
+      align-items: center;
+      animation: fadeIn 0.3s;
+    }
+    .modal-content {
+      background: #2b2b2b;
+      padding: 20px;
+      border-radius: 12px;
+      width: 300px;
+      text-align: center;
+      animation: slideUp 0.3s;
+    }
+    @keyframes fadeIn { from {opacity: 0;} to {opacity: 1;} }
+    @keyframes slideUp { from {transform: translateY(30px);} to {transform: translateY(0);} }
+    .modal button {
+      margin-top: 10px;
+    }
+    .close {
+      float: right;
+      cursor: pointer;
+      color: #aaa;
+    }
+    .close:hover {
+      color: #fff;
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>🦖 Dino Shop</h1>
+    <select id="currencySelect" class="currency-select">
+      <option value="RUB">RUB</option>
+      <option value="UAH">UAH</option>
+      <option value="USD">USD</option>
+    </select>
+  </header>
 
-<header>
-  <h1>ISLE'S ECHO SHOP</h1>
-  <select id="currency" class="currency-select">
-    <option value="RUB">RUB</option>
-    <option value="UAH">UAH</option>
-    <option value="USD">USD</option>
-  </select>
-</header>
+  <div class="tabs">
+    <div class="tab active" data-category="herb">🌿 Травоядные</div>
+    <div class="tab" data-category="carn">🍖 Плотоядные</div>
+  </div>
 
-<div class="shop" id="shop"></div>
+  <div class="filters">
+    <button class="filter-btn active" data-tier="all">Все</button>
+    <button class="filter-btn" data-tier="1">Тир 1</button>
+    <button class="filter-btn" data-tier="2">Тир 2</button>
+    <button class="filter-btn" data-tier="3">Тир 3</button>
+  </div>
 
-<script>
-  const shop = document.getElementById("shop");
-  const currencySelect = document.getElementById("currency");
-  const dinos = [
-    { name: "Rex", price: 1500 },
-    { name: "Utah", price: 1200 },
-    { name: "Allo", price: 1300 },
-    { name: "Antro", price: 1000 },
-    { name: "Cera", price: 1100 },
-    { name: "Giga", price: 1700 },
-    { name: "Spino", price: 2000 }
-  ];
-  let rates = { UAH: 0.42, USD: 0.011 };
+  <section class="shop" id="shop"></section>
 
-  async function fetchRates() {
-    try {
-      const res = await fetch("https://api.exchangerate.host/latest?base=RUB&symbols=UAH,USD");
-      const data = await res.json();
-      rates = {
-        UAH: data.rates.UAH,
-        USD: data.rates.USD
-      };
-    } catch (err) {
-      console.error("Ошибка при получении курса:", err);
+  <!-- Modal -->
+  <div class="modal" id="modal">
+    <div class="modal-content">
+      <span class="close" id="closeModal">&times;</span>
+      <h2 id="modalTitle"></h2>
+      <select id="genderSelect"></select>
+      <p class="price" id="modalPrice"></p>
+      <button class="buy-btn">Перейти к оплате</button>
+    </div>
+  </div>
+
+  <script>
+    const dinos = {
+      herb: [
+        { name: "Dryosaurus", tier: 1, price: {"Default": 25}, img: "images/dryo.png" },
+        { name: "Avaceratops", tier: 1, price: {"Default": 30}, img: "images/avacera.png" },
+        { name: "Gallimimus", tier: 1, price: {"Default": 45}, img: "images/galli.png" }
+      ],
+      carn: [
+        { name: "Herrerasaurus", tier: 1, price: {"Default": 25}, img: "images/herrera.png" },
+        { name: "Austroraptor", tier: 1, price: {"Default": 25}, img: "images/austro.png" },
+        { name: "Utahraptor", tier: 1, price: {"Default": 55}, img: "images/utah.png" }
+      ]
+    };
+
+    let rates = {
+      RUB: 1,
+      UAH: 0.45,
+      USD: 0.011
+    };
+
+    let currentCurrency = "RUB";
+    const currencySelect = document.getElementById("currencySelect");
+
+    const shop = document.getElementById('shop');
+    const modal = document.getElementById('modal');
+    const modalTitle = document.getElementById('modalTitle');
+    const modalPrice = document.getElementById('modalPrice');
+    const genderSelect = document.getElementById('genderSelect');
+    let currentDino = null;
+
+    async function fetchRates() {
+      try {
+        const res = await fetch("https://api.exchangerate.host/latest?base=RUB&symbols=RUB,UAH,USD");
+        const data = await res.json();
+        rates = data.rates;
+        render();
+      } catch (err) {
+        console.error("Ошибка загрузки курсов:", err);
+      }
     }
-  }
 
-  function renderShop() {
-    shop.innerHTML = "";
-    const cur = currencySelect.value;
-    dinos.forEach(d => {
-      const converted = (d.price * (cur === "RUB" ? 1 : rates[cur])).toFixed(2);
-      const card = document.createElement("div");
-      card.className = "card";
-      card.innerHTML = `
-        <h3>${d.name}</h3>
-        <p><strong>${converted} ${cur}</strong></p>
-        <button class="buy-btn">Купить</button>
-      `;
-      shop.appendChild(card);
+    function convertPrice(price) {
+      return (price * rates[currentCurrency]).toFixed(2);
+    }
+
+    function render(category="herb", tier="all") {
+      shop.innerHTML = "";
+      dinos[category].forEach(d => {
+        if (tier !== "all" && d.tier != tier) return;
+        const card = document.createElement('div');
+        card.className = "card";
+        const basePrice = Object.values(d.price)[0];
+        card.innerHTML = `
+          <img src="${d.img}" alt="${d.name}">
+          <h3>${d.name}</h3>
+          <p class="price">${convertPrice(basePrice)} ${currentCurrency}</p>
+          <button class="buy-btn">Купить</button>
+        `;
+        card.querySelector('.buy-btn').onclick = () => openModal(d);
+        shop.appendChild(card);
+      });
+    }
+
+    function openModal(dino) {
+      currentDino = dino;
+      modal.style.display = "flex";
+      modalTitle.textContent = dino.name;
+      genderSelect.innerHTML = "";
+      const keys = Object.keys(dino.price);
+      keys.forEach(k => {
+        const opt = document.createElement("option");
+        opt.value = k;
+        opt.textContent = k;
+        genderSelect.appendChild(opt);
+      });
+      updatePrice();
+    }
+
+    function updatePrice() {
+      const gender = genderSelect.value;
+      modalPrice.textContent = convertPrice(dinoPrice(currentDino, gender)) + " " + currentCurrency;
+    }
+
+    function dinoPrice(dino, gender) {
+      return dino.price[gender] || Object.values(dino.price)[0];
+    }
+
+    genderSelect.onchange = updatePrice;
+    document.getElementById('closeModal').onclick = () => modal.style.display = "none";
+    window.onclick = e => { if (e.target == modal) modal.style.display = "none"; }
+
+    document.querySelectorAll('.tab').forEach(tab => {
+      tab.onclick = () => {
+        document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+        tab.classList.add('active');
+        render(tab.dataset.category, document.querySelector('.filter-btn.active').dataset.tier);
+      }
     });
-  }
 
-  currencySelect.addEventListener("change", renderShop);
+    document.querySelectorAll('.filter-btn').forEach(btn => {
+      btn.onclick = () => {
+        document.querySelectorAll('.filter-btn').forEach(b => b.classList.remove('active'));
+        btn.classList.add('active');
+        render(document.querySelector('.tab.active').dataset.category, btn.dataset.tier);
+      }
+    });
 
-  // Загружаем курсы, затем рендер сайта
-  fetchRates().then(renderShop);
-</script>
+    currencySelect.onchange = () => {
+      currentCurrency = currencySelect.value;
+      render(document.querySelector('.tab.active').dataset.category, document.querySelector('.filter-btn.active').dataset.tier);
+      if (currentDino) updatePrice();
+    };
 
+    fetchRates(); // загрузка курсов при старте
+  </script>
 </body>
 </html>
