--- a/index.html
+++ b/index.html
@@ -5,122 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dino Shop</title>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #1b1b1b;
-      color: #fff;
-    }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px;
-      background: #2e8b57;
-    }
-    header h1 { margin: 0; }
-    .currency-select {
-      background: #333;
-      color: white;
-      padding: 6px;
-      border-radius: 6px;
-      border: none;
-      cursor: pointer;
-    }
-    .tabs {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin: 20px 0;
-    }
-    .tab {
-      padding: 10px 20px;
-      background: #333;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .tab.active { background: #2e8b57; }
-    .filters {
-      text-align: center;
-      margin-bottom: 15px;
-    }
-    .filters button {
-      margin: 0 5px;
-      padding: 6px 12px;
-      border: none;
-      border-radius: 6px;
-      background: #444;
-      color: white;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .filters button.active { background: #2e8b57; }
-    .shop {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-    .card {
-      background: #2b2b2b;
-      padding: 15px;
-      border-radius: 12px;
-      text-align: center;
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 12px rgba(0,0,0,0.5);
-    }
-    .card img {
-      max-width: 100%;
-      border-radius: 10px;
-      margin-bottom: 10px;
-    }
-    .price {
-      color: #90ee90;
-      font-size: 18px;
-      margin: 10px 0;
-    }
-    .buy-btn {
-      padding: 8px 16px;
-      border: none;
-      border-radius: 8px;
-      background: #2e8b57;
-      color: white;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .buy-btn:hover { background: #3cb371; }
-    /* Modal */
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7);
-      justify-content: center;
-      align-items: center;
-      animation: fadeIn 0.3s;
-    }
-    .modal-content {
-      background: #2b2b2b;
-      padding: 20px;
-      border-radius: 12px;
-      width: 300px;
-      text-align: center;
-      animation: slideUp 0.3s;
-    }
-    @keyframes fadeIn { from {opacity: 0;} to {opacity: 1;} }
-    @keyframes slideUp { from {transform: translateY(30px);} to {transform: translateY(0);} }
-    .modal button { margin-top: 10px; }
-    .close {
-      float: right;
-      cursor: pointer;
-      color: #aaa;
-    }
-    .close:hover { color: #fff; }
+    body { margin:0; font-family:Arial,sans-serif; background:#1b1b1b; color:#fff; }
+    header { display:flex; justify-content:space-between; align-items:center; padding:20px; background:#2e8b57; }
+    header h1{margin:0;}
+    .currency-select{background:#333;color:#fff;padding:6px;border-radius:6px;border:none;cursor:pointer;}
+    .tabs{display:flex;justify-content:center;gap:10px;margin:20px 0;}
+    .tab{padding:10px 20px;background:#333;border-radius:8px;cursor:pointer;transition:.3s;}
+    .tab.active{background:#2e8b57;}
+    .filters{text-align:center;margin-bottom:15px;}
+    .filters button{margin:0 5px;padding:6px 12px;border:none;border-radius:6px;background:#444;color:white;cursor:pointer;transition:.3s;}
+    .filters button.active{background:#2e8b57;}
+    .shop{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:20px;padding:20px;}
+    .card{background:#2b2b2b;padding:15px;border-radius:12px;text-align:center;transition:transform .3s,box-shadow .3s;}
+    .card:hover{transform:translateY(-5px);box-shadow:0 6px 12px rgba(0,0,0,.5);}
+    .card img{max-width:100%;border-radius:10px;margin-bottom:10px;}
+    .price{color:#90ee90;font-size:18px;margin:10px 0;}
+    .buy-btn{padding:8px 16px;border:none;border-radius:8px;background:#2e8b57;color:white;cursor:pointer;transition:.3s;}
+    .buy-btn:hover{background:#3cb371;}
+    .modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.7);justify-content:center;align-items:center;animation:fadeIn .3s;}
+    .modal-content{background:#2b2b2b;padding:20px;border-radius:12px;width:300px;text-align:center;animation:slideUp .3s;}
+    @keyframes fadeIn{from{opacity:0;}to{opacity:1;}}
+    @keyframes slideUp{from{transform:translateY(30px);}to{transform:translateY(0);}}
+    .modal button{margin-top:10px;}
+    .close{float:right;cursor:pointer;color:#aaa;}
+    .close:hover{color:#fff;}
   </style>
 </head>
 <body>
@@ -161,14 +69,40 @@
   <script>
     const dinos = {
       herb: [
-        { name: "Dryosaurus", tier: 1, price: {"Default": 25}, img: "" },
-        { name: "Avaceratops", tier: 1, price: {"Default": 30}, img: "" },
-        { name: "Gallimimus", tier: 1, price: {"Default": 45}, img: "" }
+        { name: "Dryosaurus", tier: 1, price: {"Default": 25} },
+        { name: "Avaceratops", tier: 1, price: {"Default": 30} },
+        { name: "Gallimimus", tier: 1, price: {"Default": 45} },
+
+        { name: "Maiasaura", tier: 2, price: {"Male": 90, "Female": 130} },
+        { name: "Diabloceratops", tier: 2, price: {"Male": 110, "Female": 165} },
+        { name: "Pachycephalosaurus", tier: 2, price: {"Male": 40, "Female": 90} },
+
+        { name: "Stegosaurus", tier: 3, price: {"Male": 210, "Female": 275} },
+        { name: "Ankylosaurus", tier: 3, price: {"Male": 190, "Female": 255} },
+        { name: "Therizinosaurus", tier: 3, price: {"Male": 225, "Female": 290} },
+        { name: "Triceratops", tier: 3, price: {"Male": 235, "Female": 295} },
+        { name: "Shantungosaurus", tier: 3, price: {"Male": 245, "Female": 310} },
+        { name: "Camarasaurus", tier: 3, price: {"Default": 340} },
+        { name: "Puertasaurus", tier: 3, price: {"Default": 445} }
       ],
       carn: [
-        { name: "Herrerasaurus", tier: 1, price: {"Default": 25}, img: "" },
-        { name: "Austroraptor", tier: 1, price: {"Default": 25}, img: "" },
-        { name: "Utahraptor", tier: 1, price: {"Default": 55}, img: "" }
+        { name: "Herrerasaurus", tier: 1, price: {"Default": 25} },
+        { name: "Austroraptor", tier: 1, price: {"Default": 25} },
+        { name: "Utahraptor", tier: 1, price: {"Default": 55} },
+        { name: "Dilophosaurus", tier: 1, price: {"Default": 65} },
+
+        { name: "Ceratosaurus", tier: 2, price: {"Male": 110, "Female": 150} },
+        { name: "Allosaurus", tier: 2, price: {"Male": 150, "Female": 190} },
+        { name: "Baryonyx", tier: 2, price: {"Male": 85, "Female": 125} },
+        { name: "Carnotaurus", tier: 2, price: {"Male": 110, "Female": 180} },
+        { name: "Suchomimus", tier: 2, price: {"Male": 150, "Female": 190} },
+        { name: "Albertosaurus", tier: 2, price: {"Default": 220} },
+
+        { name: "Acrocanthosaurus", tier: 3, price: {"Male": 190, "Female": 260} },
+        { name: "Tyrannosaurus (Subadult)", tier: 3, price: {"Male": 220, "Female": 300} },
+        { name: "Tyrannosaurus (Feathered)", tier: 3, price: {"Default": 350} },
+        { name: "Spinosaurus", tier: 3, price: {"Male": 220, "Female": 320} },
+        { name: "Giganotosaurus", tier: 3, price: {"Male": 210, "Female": 300} }
       ]
     };
 
@@ -205,9 +139,8 @@
         const card = document.createElement('div');
         card.className = "card";
         const basePrice = Object.values(d.price)[0];
-        const imgSrc = d.img || "https://via.placeholder.com/200x150?text=Dino";
         card.innerHTML = `
-          <img src="${imgSrc}" alt="${d.name}">
+          <img src="https://via.placeholder.com/200x150?text=${d.name}" alt="${d.name}">
           <h3>${d.name}</h3>
           <p class="price">${convertPrice(basePrice)} ${currentCurrency}</p>
           <button class="buy-btn">Купить</button>
@@ -268,7 +201,7 @@
     };
 
     fetchRates();
-    setInterval(fetchRates, 5 * 60 * 1000); // автообновление раз в 5 минут
+    setInterval(fetchRates, 5 * 60 * 1000); // автообновление каждые 5 минут
   </script>
 </body>
 </html>
